high score list now updates with local storage

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     </head>
     <header class="navbar bg-dark text-white text-center">
         <h1 class="text-center">Javascript Quiz</h1>
+        <a class="text-left text-light custom-a" href="/high-score.html">High score list</a>
     </header>
     <body class="vw-100 align-content-center">
         <div class=''>
-            <form class="mx-auto p-3 mt-4 rounded col-6 background">
+            <form class="mx-auto p-3 mt-4 rounded col-8 background">
             <label id="questionEl" for="question" class="">Click start to begin</label>
             <br>
                     <input type="radio" name="answer">
