repathed anchor element to highscore page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <header class="navbar bg-dark text-white text-center">
         <h1 class="text-center">Javascript Quiz</h1>
-        <a class="text-left text-light custom-a" href="/high-score.html">High score list</a>
+        <a class="text-left text-light custom-a" href="./high-score.html" target="_blank">High score list</a>
     </header>
     <body class="vw-100 align-content-center">
         <div class=''>
