--- a/high-score.html
+++ b/high-score.html
@@ -5,15 +5,15 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/style.css">
     </head>
-    <header class="navbar bg-dark text-white text-center">
+    <header class="bg-dark text-white text-center mb-3 vw-100">
         <h1>high scores</h1>
-    </header>
-    <body class="container bg-info">
+    </header>    
+    <body class="w-50 mx-auto bg-info">
         
-        <div class="row w-100 bg-light p-4 rounded">
-            <ol id="highScores" class="col-6">Name
+        <div class="row bg-light p-4 rounded">
+            <ol id="highScores" class="col-6 font-weight-bold">Name
             </ol>
-            <ol class="col-6 custom-li" id="scoreList">Score
+            <ol class="col-6 custom-li font-weight-bold" id="scoreList">Score
             </ol>
         </div>
     </body>
