--- a/high-score.html
+++ b/high-score.html
@@ -7,6 +7,7 @@
     </head>
     <header class="bg-dark text-white text-center mb-3 vw-100">
         <h1>high scores</h1>
+        <a class="text-white" href="./index.html">Return to Quiz</a>
     </header>    
     <body class="w-50 mx-auto bg-info">
         
